parallax fix on mobile

--- a/css/ifx-2021.css
+++ b/css/ifx-2021.css
@@ -1013,6 +1013,9 @@ div#main {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover; }
+  @media (max-width: 991px) {
+    .ifx-row-full_screen_parallax .full-screen-parallax__wrapper {
+      height: 35vh !important; } }
 
 .ifx-row-contact_tiles .contact-tile {
   -webkit-box-shadow: 0 4px 8px 0 rgba(51, 91, 130, 0.12), 0 0 1px 0 rgba(10, 31, 68, 0.1);
